# todo

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: config.rs  issue.rs  lib.rs  project.rs  target.rs
app/src/project/: data.rs  metadata.rs
cli/: Cargo.toml
cli/src/: command.rs  display.rs  main.rs  opts.rs  output.rs
cli/tests/: add_issue.md  add_issue.rs  common_tests.rs  init_project.md  init_project.rs  list.md  list.rs  list_complex.md  list_display.md  new_project.md  new_project.rs  tree.md  tree.rs  tree_complex.md
cli/tests/common/: case.rs  cmd.rs  mod.rs
doc/: layers.md
doc/cli/: config_location.md  project_location.md
lib/: Cargo.toml
lib/src/: id.rs  issue.rs  lib.rs  plan.rs  project.rs
tests/: Cargo.toml
tests/src/: lib.rs
tracker-fs/: Cargo.toml
tracker-fs/src/: config.rs  file.rs  generator.rs  issue.rs  lib.rs  load.rs  placement.rs  plan.rs  project.rs  save.rs  tracker.rs
tracker-fs/src/load/: parse.rs
tracker-fs/src/plan/: parse.rs
tracker-fs/tests/: load_project_plan.rs
