[workspace]
resolver = "2"
members = [
    "app",
    "cli",
    "lib",
    "tracker-fs",
    "tests",
]

[profile.release]
lto = true

    [workspace.dependencies]
    regex = "1.11"
    anyhow = "1.0"
    indexmap = { version = "2.7", features = ["serde"] }
    serde = { version = "1.0", features = ["derive"] }
    thiserror = "2.0"
