[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
config-load = "0.1"
config = { version = "0.15", features = [
    "preserve_order",
] }
home = "0.5"
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_regex = "1.1"
thiserror = { workspace = true }
todo-lib = { path = "../lib" }
todo-tracker-fs = { path = "../tracker-fs" }
