[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
either = { workspace = true }
indexmap = { workspace = true }
todo-app = { path = "../app" }
todo-lib = { path = "../lib" }
todo-tracker-fs = { path = "../tracker-fs" }

[dev-dependencies]
md-cli-test = "0.1"
assert_cmd = "2.0"
pulldown-cmark = "0.13"
regex = { workspace = true }
temp_testdir = { workspace = true }
