[package]
name = "todo-tracker-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
fs-err = "2.11"
indexmap = { workspace = true }
once_cell = "1.19"
regex = "1.10"
serde = { workspace = true }
thiserror = "1.0"
todo-lib = { path = "../lib" }
toml = { version = "0.8", features = ["preserve_order"] }
walkdir = "2.4"

[dev-dependencies]
anyhow = { workspace = true }
function_name = "0.3"
tests = { path = "../tests" }
temp_testdir = "0.2"
