[package]
name = "todo-tracker-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
fs-err = "3.1"
indexmap = { workspace = true }
once_cell = "1.21"
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
todo-lib = { path = "../lib" }
toml = { version = "0.8", features = ["preserve_order"] }
walkdir = "2.5"

[dev-dependencies]
anyhow = { workspace = true }
function_name = "0.3"
temp_testdir = { workspace = true }
tests = { path = "../tests" }
